# denarii

./: .gitignore  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  gurobi_example.c  gurobi_wrapper.rs
src/: drf.rs  gurobi_ffi.rs  lib.rs  main.rs
src/algorithms/: asset_fairness.rs  ceei.rs  drf.rs  mod.rs
src/gurobi/: ffi.rs  mod.rs
src/simulator/: mod.rs  packet.rs  sim.rs
