[package]
name = "denarii"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
float-cmp = "0.5.3"
clap = "~2.27.0"

[dev-dependencies]
rusty-hook = "^0.10.1"
